@@ -1,3 +1,8 @@
+2007-12-15  Jonh Wendell <jwendell@gnome.org>
+	* src/vinagre-commands.c:
+	Make links in about dialog clickable. Closes #503770
+	Thanks to Jaap A. Haitsma for the patch.
+
 2007-12-14  Jonh Wendell <jwendell@gnome.org>
 	Small adjusts in .desktop files. Closes #503650
 
